--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     ports:
       - 8080:8080
     environment:
-      DATABASE_URL: "postgres://postgres:postgres@postgres:5432/postgres?sslmode=disable"
+      POSTGRES_HOST: postgres
     depends_on:
       postgres:
         condition: service_healthy
